@@ -1,5 +1,0 @@
-def foo(y):
-   x=y
-   return x
-
-bar = foo(7)
