@@ -28,7 +28,7 @@ compile "org.springframework.integration:spring-integration-scripting:{project-v
 ----
 ======
 
-In addition, you need to add a script engine implementation, e.g. JRuby, Jython.
+In addition, you need to add a script engine implementation, e.g. JRuby.
 
 Starting with version 5.2, Spring Integration provides a Kotlin Jsr223 support.
 You need to add this dependency into your project to make it working:
@@ -293,9 +293,14 @@ They are mutually exclusive.
 [[graalmv-polyglot]]
 === GraalVM Polyglot
 
-Starting with version 6.0, the framework provides a `PolyglotScriptExecutor` which is based the https://www.graalvm.org/22.2/reference-manual/embed-languages[GraalVM Polyglot API].
+Starting with version 6.0, the framework provides a `PolyglotScriptExecutor` which is based the https://www.graalvm.org/latest/reference-manual/languages/[GraalVM Polyglot API].
 The JSR223 engine implementation for JavaScript, removed from Java by itself, has been replaced by using this new script executor.
-See more information about enabling JavaScript support in GraalVM and what https://www.graalvm.org/22.2/reference-manual/js[configuration options] can be propagated via script variables.
+See more information about enabling JavaScript support in GraalVM and what https://www.graalvm.org/latest/reference-manual/js/[configuration options] can be propagated via script variables.
+
+Starting with version 6.4, the Python scripts support has been migrated to GraalVM Polyglot as well.
+Now these scripts can be written in Python 3.x and can use third-party libraries.
+See https://www.graalvm.org/latest/reference-manual/python/[GraalPy] documentation for more information.
+
 By default, the framework sets `allowAllAccess` to `true` on the shared Polyglot `Context` which enables this interaction with host JVM:
 
 * The creation and use of new threads.
@@ -308,5 +313,3 @@ By default, the framework sets `allowAllAccess` to `true` on the shared Polyglot
 * The access to process environment variables.
 
 This can be customized via overloaded `PolyglotScriptExecutor` constructor which accepts a `org.graalvm.polyglot.Context.Builder`.
-
-To enable this JavaScript support, GraalVM with the `js` component installed has to be used or, when using a regular JVM, the `org.graalvm.sdk:graal-sdk` and `org.graalvm.js:js` dependencies must be included.
